Updated traineeships header copy

--- a/app/views/trainee-layout.html
+++ b/app/views/trainee-layout.html
@@ -44,7 +44,7 @@
   {# Set serviceName in config.js. #}
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: "Traineeships",
+    serviceName: "Manage traineeships",
     serviceUrl: "/",
     containerClasses: "govuk-width-container"
   }) }}
@@ -67,7 +67,7 @@
       <div id="floating-menu-holder" class="trainee-floating-menu">
         <div class="account-information floating-menu" role="navigation">
             <div class="js-float">
-                <p class="floating-head-text">Your trainee account</p>
+                <p class="floating-head-text">Your training provider account</p>
                 <nav id="user-nav">
                     <ul role="menubar">
                         <li><a href="/" class="govuk-link sub-menu-item">XYZ Training UK</a></li>
