--- a/app/views/v6/traineeships/create/check-your-answers.html
+++ b/app/views/v6/traineeships/create/check-your-answers.html
@@ -186,7 +186,7 @@ Check your answers before submitting your vacancy - Recruitment - {{serviceName}
        
         </dl>
 
-        <h2 class="govuk-heading-m">Skills and qualifications</h2>
+        <h2 class="govuk-heading-m">Requirements and prospects</h2>
 
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
 
