--- a/app/views/v6/provider/create/long-description.html
+++ b/app/views/v6/provider/create/long-description.html
@@ -52,7 +52,7 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
             <label class="govuk-label govuk-label--m" for="VacancyDescription">
               What will the apprentice be doing?
             </label>
-            <div class="govuk-hint">Describe what an average day or week will be like and what tasks they could be doing.</div>
+            <div class="govuk-hint">Describe what an average day or week will be like and what tasks the apprentice could be doing.</div>
 
             <div class="govuk-inset-text">
              You must include at least 3 bullet points or your vacancy will be rejected.
@@ -71,14 +71,13 @@ Description of the vacancy - Recruitment - {{serviceName}} - GOV.UK
             <label class="govuk-label govuk-label--m" for="TrainingQualification">
               What training will the apprentice take and what qualification will the apprentice get at the end?
             </label>
-            <p class="govuk-body">You must include information about the following:</p>
+            <p class="govuk-body">You must include information about:</p>
             <ul class="govuk-list govuk-list--bullet">
               <li>
-                the qualification they will get at the end. You may want to have a look at the&nbsp; <a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels" class="govuk-link">types of qualifications
-                  available
-                  (opens in new tab)</a>
+                the qualification they will get at the end. You can <a href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels" target="_blank" class="govuk-link">view the types of qualifications available (opens in a new tab)</a>
               </li>
-              <li>where and when the apprentice will do their training. If you can, add detail about the location of the training. It would also be helpful to include if it is a day a week or block release </li>
+              <li>where and when the apprentice will do their training - if you can, add details about the location of the training</li>
+              <li>whether the training will be one day a week or block release</li>
             </ul>
             {% if 'TrainingQualification' in data.errorType %}
             <span id="TrainingQualification-error" class="govuk-error-message">
