Updated content on traineeship preview

--- a/app/views/v6/traineeships/create/preview-vacancy.html
+++ b/app/views/v6/traineeships/create/preview-vacancy.html
@@ -42,19 +42,33 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
 
       <div class="govuk-grid-row" id="apprenticeshipSummary">
         <div class="govuk-grid-column-full">
-          <h2 class="govuk-heading-l">Traineeship details</h2>
+          <h2 class="govuk-heading-l">Traineeship summary</h2>
         </div>
       </div>
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds" id="vacancyDescription">
-          <p>A Traineeship is an education and training programme with work experience that is focused on giving young people the skills that employers are looking for. At its core are work preparation training, English and maths for those who need it, and a high-quality work experience placement.</p>
-          <p>Traineeships help unlock your great potential and give you the work preparation training, maths and English and work experience needed to get an Apprenticeship or other job.</p>
-          <p>Are you eligible?</p>
+          <p>A traineeship is a course with work experience that gets you ready for work or an apprenticeship. It can last up to 12 months.</p>
+
+          <p>You can apply if you’re:</p>
+
           <ul class="govuk-list govuk-list--bullet">
-            <li>Are you currently not in a job? Do you have little or no work experience?</li>
-            <li>Are you aged 16 to 24 and qualified below Level 4?</li>
+            <li>eligible to work in England</li>
+            <li>unemployed and have little or no work experience</li>
+            <li>Aged 16 to 24 and qualified below Level 4</li>
           </ul>
+          
+          <p>You’ll get:</p>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li>A work experience placement</li>
+            <li>Help with English and maths (if you need it)</li>
+          </ul>
+
+          <p>You won’t be paid, but you may be given expenses for things like travel and meals.</p>
+
+          <h3 class="govuk-heading-s">Training provided</h3>
+
           <p>During your 2 weeks of work experience as a Customer Relations Trainee you will:</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>Identify potential wholesale stockists</li>
@@ -62,7 +76,7 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
             <li>Record communications and progress using a spreadsheet</li>
           </ul>
 
-          <h3 class="govuk-heading-s">What work experience and training will the trainee get?</h3>
+          <h3 class="govuk-heading-s">Work experience provided</h3>
           <p>This 10-week Traineeship opportunity includes 8 weeks of work preparation training and 2 weeks of work experience.</p>
           <ul class="govuk-list govuk-list--bullet">
             <li>Real Work Placement of minimum 70 hours</li>
