Traineeship copy changes

--- a/app/views/v6/traineeships/create/duration.html
+++ b/app/views/v6/traineeships/create/duration.html
@@ -33,7 +33,7 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
       <div class="govuk-character-count" data-module="govuk-character-count" data-maxlength="250">
         <div class="govuk-form-group">
           <label class="govuk-label govuk-label--m" for="workingWeekDescription">
-            Details of working week
+            Details of work experience
           </label>
           <div class="govuk-hint">For example, Monday to Friday 9am to 5pm, shifts, may work evenings and weekends</div>
           <textarea class="govuk-textarea govuk-!-width-three-quarters govuk-js-character-count " id="workingWeekDescription"
@@ -46,7 +46,7 @@ Duration and working hours - Recruitment - {{serviceName}} - GOV.UK
 
       <div class="govuk-form-group">
         <label class="govuk-label govuk-label--m" for="weekly-hours">
-          How many hours will the trainee be on placement each week?
+          How many hours will the trainee be on placement in total?
         </label>
 
         <div class="govuk-input__wrapper">
