--- a/app/views/v6/provider/create/qualifications.html
+++ b/app/views/v6/provider/create/qualifications.html
@@ -32,6 +32,7 @@ What qualifications would you like the applicant to have? - Recruitment - {{serv
           <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
           What qualifications would you like the applicant to have?
         </h1>
+        <p class="govuk-hint"> <a class="govuk-link--no-visited-state"  target="_blank" href="https://www.gov.uk/what-different-qualification-levels-mean/list-of-qualification-levels"> What's the GCSE grading system? (opens in a new tab)</a></p>
         <form method="post">
           <div class="govuk-form-group">
               <label class="govuk-label" id="QualificationsHeading" for="QualificationType">Add qualifications applicants should have</label>
