Updated provider index page and updated traineeship dashboard

--- a/app/views/v6/provider/account-home.html
+++ b/app/views/v6/provider/account-home.html
@@ -20,11 +20,13 @@
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
-							<a href="add__choose-employer" class="govuk-link govuk-link--no-visited-state">Create a cohort</a>
+							<a href="add__choose-employer" class="govuk-link govuk-link--no-visited-state">Add new apprentices</a>
 						</h2>
-						<p>
-							Create new cohorts on behalf of an employer.
-						</p>
+						<ul class="govuk-list govuk-list--bullet">
+						  <li>manually enter details</li>
+						  <li>create a new cohort</li>
+						  <li>add to an existing cohort</li>
+						</ul>
 					</div>
 
 					<div class="govuk-grid-column-one-half">
@@ -42,16 +44,16 @@
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
-							<a href="#" class="govuk-link govuk-link--no-visited-state">Your cohorts</a>
+							<a href="#" class="govuk-link govuk-link--no-visited-state">Apprentice requests</a>
 						</h2>
 						<p>
-							Review, edit, approve and add apprentices to new cohorts.
+							Review, edit, approve and add apprentices.
 						</p>					
 					</div>
 
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
-							<a href="#" class="govuk-link govuk-link--no-visited-state">Manage funding reserved for non-levy employers</a>
+							<a href="#" class="govuk-link govuk-link--no-visited-state">Manage your funding reserved for non-levy employers</a>
 						</h2>
 						<p>
 							Add apprentice information to funding you have already reserved for non-levy employers.
@@ -82,11 +84,24 @@
 				<div class="govuk-grid-row">
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
-							<a href="growth-limit" class="govuk-link govuk-link--no-visited-state">View funding tracker</a>
+							<a href="growth-limit" class="govuk-link govuk-link--no-visited-state">Find employers that need a training provider</a>
 						</h2>
-						<p>View the growth limit and a breakdown of confirmed and planned funding.</p>
+						<p>View employers and share your contact details with them.</p>
 					</div>
 
+					<div class="govuk-grid-column-one-half">
+						<h2 class="govuk-heading-m">
+							<a href="#" class="govuk-link govuk-link--no-visited-state">Organisations and agreements</a>
+						</h2>
+						<p>Find and view organisations and their agreement IDs.</p>
+					</div>
+
+				</div>	
+
+				<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+
+				<div class="govuk-grid-row">
+					
 					<div class="govuk-grid-column-one-half">
 						<h2 class="govuk-heading-m">
 							<a href="#" class="govuk-link govuk-link--no-visited-state">Set up employer account</a>
@@ -95,17 +110,6 @@
 							Start setting up an apprenticeship service account for an employer.<br><br>
 							<a href="#" class="govuk-link govuk-link--no-visited-state">View invited employers</a>
 						</p>
-					</div>
-				</div>	
-
-				<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-				<div class="govuk-grid-row">
-					<div class="govuk-grid-column-one-half">
-						<h2 class="govuk-heading-m">
-							<a href="#" class="govuk-link govuk-link--no-visited-state">Organisations and agreements</a>
-						</h2>
-						<p>Find and view organisations and their agreement IDs.</p>
 					</div>
 
 					<div class="govuk-grid-column-one-half">
