--- a/app/views/v6/traineeships/dashboard.html
+++ b/app/views/v6/traineeships/dashboard.html
@@ -11,7 +11,7 @@ Recruitment - {{serviceName}} - GOV.UK
     <div class="govuk-grid-row govuk-!-margin-top-4">
       <div class="govuk-grid-column-two-thirds">
         <!-- Heading -->
-        <h1 class="govuk-heading-xl ">Recruitment</h1>
+        <h1 class="govuk-heading-xl ">Manage traineeships</h1>
       </div>
       <div class="govuk-grid-column-one-third" style="text-align: right;">
         <a href="create/start-page" class="govuk-button" data-module="govuk-button">Create vacancy</a>
@@ -28,7 +28,7 @@ Recruitment - {{serviceName}} - GOV.UK
                   <input type="hidden" name="clientsFilter" value="new">
                   <div class="search-input search-input-with-button">
                     <label class="govuk-label" for="search">
-                      Search vacancies
+                      Search by vacancy title or reference number
                     </label>
                   <div class="autocomplete__parent_wrapper">
                     <div class="autocomplete__wrapper">
@@ -160,7 +160,7 @@ Recruitment - {{serviceName}} - GOV.UK
                 Live vacancies
               </a>
             </h3>
-            <p class="govuk-body das-card--description">Vacancies on Find an apprenticeship service.</p>
+            <p class="govuk-body das-card--description">Vacancies on Find a traineeship.</p>
             <!--  <ul class="das-card--tasks govuk-list">
                 <li>
                   <a class="govuk-link" href="vacancies?filter=closing">6 live vacancies closing soon</a>
@@ -183,7 +183,7 @@ Recruitment - {{serviceName}} - GOV.UK
               </a>
 
             </h3>
-            <p class="govuk-body das-card--description">Applications from Find an apprenticeship service.</p>
+            <p class="govuk-body das-card--description">Applications from Find a traineeship.</p>
             <!--  <ul class="das-card--tasks govuk-list">
                 <li>
                   <a class="ga-track-anchor-click" href="vacancies?filter=withApplication" data-ga-event-category="link - click" >View all applications</a>
@@ -204,7 +204,7 @@ Recruitment - {{serviceName}} - GOV.UK
                   Closed vacancies
               </a>
             </h3>
-            <p class="govuk-body das-card--description">Vacancies that have passed the closing date. You can clone these vacancies to republish them.</p>
+            <p class="govuk-body das-card--description">Vacancies that have passed the closing date.</p>
           </div>
         </div>
       </div>
