Updated traineeships dashboard

--- a/app/views/v6/traineeships/dashboard.html
+++ b/app/views/v6/traineeships/dashboard.html
@@ -11,7 +11,7 @@ Recruitment - {{serviceName}} - GOV.UK
     <div class="govuk-grid-row govuk-!-margin-top-4">
       <div class="govuk-grid-column-two-thirds">
         <!-- Heading -->
-        <h1 class="govuk-heading-xl ">Manage traineeships</h1>
+        <h1 class="govuk-heading-xl ">Your traineeship vacancies</h1>
       </div>
       <div class="govuk-grid-column-one-third" style="text-align: right;">
         <a href="create/start-page" class="govuk-button" data-module="govuk-button">Create vacancy</a>
@@ -231,10 +231,7 @@ Recruitment - {{serviceName}} - GOV.UK
         <p class="govuk-body">Set up and manage the emails you're sent about your vacancies and applications.</p>
       </div>
 
-      <div class="govuk-grid-column-one-third ">
-        <h3 class="govuk-heading-s"><a class="govuk-link govuk-link--no-visited-state" href="api/api">Recruitment APIs</a></h3>
-        <p class="govuk-body">Integrate our API to create vacancies using your own systems and display vacancies on your websites.</p>
-      </div>
+
     </div>
 
 
