Removed 'application website' page from traineeship journey

--- a/app/views/v6/traineeships/create/preview-vacancy.html
+++ b/app/views/v6/traineeships/create/preview-vacancy.html
@@ -34,8 +34,9 @@ Preview your vacancy - Recruitment - {{serviceName}} - GOV.UK
           <p class="govuk-body">Do you want to gain work experience as a Customer Relations Trainee whilst working from home? If you are aged 16-24, unemployed and qualified below a level 4, please get in touch about working for this bright and quirky company.</p>
         </div>
         <div class="govuk-grid-column-one-third">
-          <p class="govuk-body">This traineeship requires you to apply through an external website.</p>
-          <p class="govuk-!-margin-bottom-1"><a id="external-employer-website" href="#">Apply now</a></p>
+          <button class="govuk-button govuk-!-margin-bottom-1" data-module="govuk-button">
+            Apply for traineeship
+          </button>
           <p class="govuk-body-s">Closing date: 31 Mar 2022</p>
         </div>
       </div>
