--- a/app/views/v6/traineeships/create/contact.html
+++ b/app/views/v6/traineeships/create/contact.html
@@ -18,7 +18,7 @@ Add contact information - Recruitment - {{serviceName}} - GOV.UK
               Do you want to add any contact details?
             </h1>
             <p>This should be someone an applicant can contact to ask questions about the traineeship position.</p>
-            <form method="post" action="application-process">
+            <form method="post" action="task-list?section4=completed">
 
               <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
