Updated H1 for provider contact page

--- a/app/views/v6/provider/create/contact.html
+++ b/app/views/v6/provider/create/contact.html
@@ -16,7 +16,7 @@ Add contact information - Recruitment - {{serviceName}} - GOV.UK
           <div class="govuk-grid-column-two-thirds">
             <span class="govuk-caption-xl">{% if data.title %}{{data.title}}{% else %}Safety, Health & Environment Technician Apprentice{% endif %}</span>
             <h1 class="govuk-heading-xl govuk-!-margin-bottom-5">
-              Do you want to add any contact details for {% if data.user == "employer" %}{{data.orgName}}{% else %}{{ data.providerName}}{% endif %}?
+              Do you want to add your contact details?
             </h1>
             <p>This should be someone an applicant can contact to ask questions about the apprenticeship position.</p>
             <form method="post" action="application-process">
