Updated colour for traineeship header

--- a/app/assets/sass/components/_provider.scss
+++ b/app/assets/sass/components/_provider.scss
@@ -11,8 +11,8 @@
 }
 
 #floating-menu-holder.trainee-floating-menu{
-  background: #669C9E !important;
-  .floating-menu {background: #669C9E;}
+  background: #3F8082 !important;
+  .floating-menu {background: #3F8082;}
 }
 
 #floating-menu {
