Updated trainee text on dashboard

--- a/app/views/v6/provider/account-home.html
+++ b/app/views/v6/provider/account-home.html
@@ -116,7 +116,7 @@
 						<h2 class="govuk-heading-m">
 							<a href="{% if data.startpage == 1 %}../traineeships/create/start-page{% else %}../traineeships/dashboard{% endif %}" class="govuk-link govuk-link--no-visited-state">Recruit trainees</a>
 						</h2>
-						<p>Create a vacancy to recruit a trainee and manage applications.</p>
+						<p>Create a traineeship vacancy and manage applications.</p>
 					</div>
 
 					
