--- a/app/views/v6/provider/includes/vacancy-list-item.html
+++ b/app/views/v6/provider/includes/vacancy-list-item.html
@@ -284,7 +284,7 @@
     <td class="govuk-table__cell das-table-colomn-10" role="gridcell"><span class="table-heading" aria-hidden="true">Status</span><span class="das-tag das-tag--{% if vacancy.status == 'Pending review' %}submitted {%else%}{{vacancy.status | lower}}{%endif%}">{{vacancy.status}}</span></td>
     <td class="govuk-table__cell das-table-colomn-5" role="gridcell" style="text-align:right">
       {% if vacancy.status == "Draft"%}
-      <a href="create/vacancy-preview?WageType=fixed&duration=24&start_day=4&closing_day=3&shortDescription=&TrainingDescription=&Skills=&qualifications=&ApplicationMethod=&VacancyDescription=&OutcomeDescription=&ThingsToConsider=&EmployerWebsiteUrl=&EmployerContactName=&disability_confident_level=&disability_confident_signed=&questions="
+      <a href="create/task-list"
         class="govuk-link">Edit and submit</a>
       {% elseif vacancy.status == "Rejected"%}
       <a href="create/vacancy-preview-referred" class="govuk-link">Edit and resubmit</a>
