--- a/app/views/v6/provider/account/clone-dates.html
+++ b/app/views/v6/provider/account/clone-dates.html
@@ -1,4 +1,4 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
 Manage apprentices
