--- a/app/views/v6/provider/create/vacancy-preview-cloned.html
+++ b/app/views/v6/provider/create/vacancy-preview-cloned.html
@@ -1,4 +1,4 @@
-{% if data.user=='employer'%}{% extends "ma-layout.html" %}{%else%}{% extends "tp-layout.html" %}{%endif%}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
 Manage apprentices
@@ -31,7 +31,7 @@ Manage apprentices
     .das-edit-link{margin-top:-10px}
 
 </style>
-<div class="govuk-info-summary das-success-summary govuk-!-margin-bottom-4" aria-labelledby="info-summary-title" role="alert" tabindex="-1" data-module="info-summary">
+<div class="govuk-info-summary das-success-summary govuk-!-margin-bottom-4 govuk-!-padding-3" aria-labelledby="info-summary-title" role="alert" tabindex="-1" data-module="info-summary">
   <p class="govuk-body govuk-!-margin-bottom-0">
     Advert successfully cloned
   </p>
@@ -202,7 +202,7 @@ This is the grounding for your future development within the network and opportu
           <p class="govuk-body"><a href="#" class="govuk-link das-preview-change-link">Change</a></p>
         </li>
         <li>
-          <h3 class="govuk-heading-s das-not-shown">Disability Confident (not visibile to candidate)<span class="govuk-hint">This is an optional section</span></h3>
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-4">Disability Confident (not visibile to candidate)</h3>
 
           <!-- <img src="https://recruit.test-eas.apprenticeships.sfa.bis.gov.uk/img/disability-confident_545x172.png" class="das-disability-confident-logo" alt="A logo confirming that the employer is registered as disability confident"> -->
           <!-- <details class="govuk-details">
@@ -222,8 +222,7 @@ This is the grounding for your future development within the network and opportu
           <p class="govuk-body"><a href="#" class="govuk-link das-preview-change-link">Add</a></p>
         </li>
         <li>
-            <h3 class="govuk-heading-s das-not-shown">Website (not visibile to candidate)</h3>
-            <p class="govuk-body"></p>
+            <h3 class="govuk-heading-s govuk-!-margin-bottom-4">Website (not visibile to candidate)</h3>
             <p class="govuk-body"><a href="#" class="govuk-link das-preview-change-link">Add</a></p>
         </li>
     </ul>
@@ -292,23 +291,17 @@ This is the grounding for your future development within the network and opportu
 <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
 
-<form method="post" action="confirmation">
-  <div class="govuk-grid-row">
-      <div class="govuk-grid-column-full">
-          <a href="delete" class="govuk-button das-delete-button">Delete advert</a>
-      </div>
+<div class="govuk-button-group">
+  <input type="hidden" name="answers-checked" value="true">
+  
+  <button class="govuk-button" data-module="govuk-button">
+    Submit vacancy
+  </button>
 
-<hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+  <a href="delete" class="govuk-button govuk-button--secondary">Delete vacancy</a>
+</div>
 
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-        <input type="submit" class="govuk-button" data-module="govuk-button" value="Submit advert">
-    </div>
-</div>
-<div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
-        <a href="../dashboard" class="govuk-body das-button--link">Save and return to your adverts</a>
-    </div>
-</div>
-</form>
+<p><a href="../dashboard">Save and return to your adverts</a></p>
+
+
 {% endblock %}
