--- a/app/views/v6/provider/vacancies.html
+++ b/app/views/v6/provider/vacancies.html
@@ -1,12 +1,13 @@
-{% extends "ma-layout.html" %}
+{% extends "tp-layout.html" %}
 
 {% block pageTitle %}
-Your adverts
+Vacancies
 {% endblock %}
+
 {% block beforeContent %}
-{% if data['user'] == "provider" %}
-<a href="./dashboard" class="govuk-back-link">Return to recruitment dashboard</a>
-{% endif %}
+{{super()}}
+<a href="./dashboard" class="govuk-back-link">Return to dashboard</a>
+
 <style>
   .search-field-darker .search-input input {
     border-color: #0b0c0c;
@@ -93,6 +94,7 @@ Your adverts
   span.das-tag--pending{border-color:#f47738;}
 </style>
 {% endblock %}
+
 {% block content %}
 {% if data.alert=="transferred" and data.user=='employer'%}
 <div class="govuk-info-basic ">
@@ -119,7 +121,7 @@ Your adverts
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <h1 class="govuk-heading-xl">Your adverts</h1>
+    <h1 class="govuk-heading-xl">Vacancies</h1>
     <!-- {% if data['user'] == "employer" %}
     <a href="create/title?returnDashaboard=multiple&user=employer" class="govuk-button ">Create vacancy</a>
     {% endif %} -->
@@ -130,9 +132,9 @@ Your adverts
   <div class="govuk-grid-column-one-third" style="text-align:right;">
     {% if data['user'] == "employer" %}
       {% if data.journey=="new"%}
-      <p class="govuk-body govuk-!-margin-bottom-0"><a href="create/title?returnDashaboard=multiple&user=employer" class="govuk-button govuk-!-margin-bottom-2">Create an advert</a></p>
+      <p class="govuk-body govuk-!-margin-bottom-0"><a href="create/title?returnDashaboard=multiple&user=employer" class="govuk-button govuk-!-margin-bottom-2">Create vacancy</a></p>
       {% else %}
-      <p class="govuk-body govuk-!-margin-bottom-0"><a href="create/create-vacancy?returnDashaboard=multiple&user=employer" class="govuk-button govuk-!-margin-bottom-2">Create an advert</a></p>
+      <p class="govuk-body govuk-!-margin-bottom-0"><a href="create/start-page" class="govuk-button govuk-!-margin-bottom-2">Create vacancy</a></p>
       {% endif %}
     {% endif %}
     {% if data['user'] == "provider" %}
@@ -151,7 +153,7 @@ Your adverts
     <form method="post" action="vacancies" {% if query.search %}data-query="{{query.search}}" {%endif%}>
       <div class="govuk-form-group">
         <label class="govuk-label" for="sort">
-          Filter adverts by
+          Filter vacancies by
         </label>
         <select class="govuk-select" id="filter" name="filter" aria-haspopup="listbox" aria-labelledby="exp_elem exp_button">
           <optgroup label="Status">
@@ -187,7 +189,7 @@ Your adverts
               <div class="search-input search-input-with-button">
                 <label class="govuk-label" for="search">
                   <!-- Client reference -->
-                  Search adverts
+                  Search vacancies
                   <!-- <span class="govuk-hint">Search for a team member by name, role or2 email</span> -->
                 </label>
 
@@ -226,33 +228,33 @@ Your adverts
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
     <p id="table-header" class="govuk-body">
-      {% if data.filter == 'any' or not data.filter %}{% if search%}{%else%}All{%endif%} <span class="displayTotal">36</span> adverts {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> <a href="vacancies?filter=any&page=1"
-        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>{%endif%}
-      {% elseif data.filter == 'live' %}<span class="displayTotal">11</span> <span class="govuk-!-font-weight-bold">live</span> adverts {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}&nbsp; <a href="vacancies?filter=any&page=1"
-        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
-      {% elseif data.filter == 'new' %}<span class="displayTotal">2</span> adverts <span class="govuk-!-font-weight-bold">with new applications</span> {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%} &nbsp; <a
-        href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
+      {% if data.filter == 'any' or not data.filter %}{% if search%}{%else%}All{%endif%} <span class="displayTotal">36</span> vacancies {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> <a href="vacancies?filter=any&page=1"
+        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>{%endif%}
+      {% elseif data.filter == 'live' %}<span class="displayTotal">11</span> <span class="govuk-!-font-weight-bold">live</span> vacancies {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}&nbsp; <a href="vacancies?filter=any&page=1"
+        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
+      {% elseif data.filter == 'new' %}<span class="displayTotal">2</span> vacancies <span class="govuk-!-font-weight-bold">with new applications</span> {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%} &nbsp; <a
+        href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
 
-      {% elseif data.filter == 'withApplication' %}<span class="displayTotal">2</span> adverts <span class="govuk-!-font-weight-bold">with applications</span> {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}
-      &nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-bold govuk-component__link govuk-!-font-size-19">Show all adverts</a>
+      {% elseif data.filter == 'withApplication' %}<span class="displayTotal">2</span> vacancies <span class="govuk-!-font-weight-bold">with applications</span> {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}
+      &nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-bold govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
 
-      {% elseif data.filter == 'rejected' %}<span class="displayTotal">2</span> <span class="govuk-!-font-weight-bold">rejected</span> adverts &nbsp; {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%} <a href="vacancies?filter=any&page=1"
-        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
-      {% elseif data.filter == 'draft' %}<span class="displayTotal">4</span> <span class="govuk-!-font-weight-bold">draft</span> adverts {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}<a href="vacancies?filter=any&page=1"
-        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
+      {% elseif data.filter == 'rejected' %}<span class="displayTotal">2</span> <span class="govuk-!-font-weight-bold">rejected</span> vacancies &nbsp; {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%} <a href="vacancies?filter=any&page=1"
+        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
+      {% elseif data.filter == 'draft' %}<span class="displayTotal">4</span> <span class="govuk-!-font-weight-bold">draft</span> vacancies {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}<a href="vacancies?filter=any&page=1"
+        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
 
-      {% elseif data.filter == 'closed' %}<span class="displayTotal">11</span> <span class="govuk-!-font-weight-bold">closed</span> adverts {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%} &nbsp; <a href="vacancies?filter=any&page=1"
-        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
-      {% elseif data.filter == 'pending review' %}<span class="displayTotal">2</span> <span class="govuk-!-font-weight-bold">adverts pending review</span> {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}
-      &nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
+      {% elseif data.filter == 'closed' %}<span class="displayTotal">11</span> <span class="govuk-!-font-weight-bold">closed</span> vacancies {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%} &nbsp; <a href="vacancies?filter=any&page=1"
+        class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
+      {% elseif data.filter == 'pending review' %}<span class="displayTotal">2</span> <span class="govuk-!-font-weight-bold">vacancies pending review</span> {%if query.search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}
+      &nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
 
-      {% elseif data.filter == 'closing' %}<span class="displayTotal">3 </span> <span class="govuk-!-font-weight-bold">live</span> adverts <span class="govuk-!-font-weight-bold">closing soon</span><span class="govuk-!-font-weight-bold"> {% if
-        search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}<a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
-        {% elseif data.filter == 'closing-no-applications' %}<span class="displayTotal">1</span> <span class="govuk-!-font-weight-bold">live</span> adverts <span class="govuk-!-font-weight-bold">closing soon with no applications</span> {% if
-        search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span>{%endif%}&nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
+      {% elseif data.filter == 'closing' %}<span class="displayTotal">3 </span> <span class="govuk-!-font-weight-bold">live</span> vacancies <span class="govuk-!-font-weight-bold">closing soon</span><span class="govuk-!-font-weight-bold"> {% if
+        search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span> {%endif%}<a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
+        {% elseif data.filter == 'closing-no-applications' %}<span class="displayTotal">1</span> <span class="govuk-!-font-weight-bold">live</span> vacancies <span class="govuk-!-font-weight-bold">closing soon with no applications</span> {% if
+        search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span>{%endif%}&nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
 
-        {% elseif data.filter == 'transferred' %}<span class="displayTotal">1</span> adverts <span class="govuk-!-font-weight-bold">transferred from provider</span> {% if
-        search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span>{%endif%}&nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all adverts</a>
+        {% elseif data.filter == 'transferred' %}<span class="displayTotal">1</span> vacancies <span class="govuk-!-font-weight-bold">transferred from provider</span> {% if
+        search %}with <span class="govuk-!-font-weight-bold">{{query.search}}</span>{%endif%}&nbsp; <a href="vacancies?filter=any&page=1" class="govuk-!-font-weight-regular govuk-component__link govuk-!-font-size-19">Show all vacancies</a>
 
         {% endif %}
 
@@ -337,11 +339,11 @@ Your adverts
       </div>
       {% endif %}
       {% if totalVacancies != 0%}
-      <div class="das-pager-summary">Showing {{currentMin}} to {% if currentMax < totalVacancies %}{{currentMax}}{%else%}{{totalVacancies}}{%endif%} of <span id="totalVacancies">{{totalVacancies}}</span> adverts</div>
+      <div class="das-pager-summary">Showing {{currentMin}} to {% if currentMax < totalVacancies %}{{currentMax}}{%else%}{{totalVacancies}}{%endif%} of <span id="totalVacancies">{{totalVacancies}}</span> vacancies</div>
       {% else %}
 
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-      <div class="das-pager-summary">No adverts match the search criteria </div>
+      <div class="das-pager-summary">No vacancies match the search criteria </div>
       <span id="totalVacancies" style="display:none">0</span>
 
       {% endif %}
