Updated dashboard link pages for provider and employer

--- a/app/views/v6/provider/account/preview.html
+++ b/app/views/v6/provider/account/preview.html
@@ -102,8 +102,7 @@ Manage vacancy
           <p>You will spend your first year full time at college, developing theoretical and practical skills whilst studying for BTEC Diploma in Engineering at an appropriate level to your prior experience. More details can be found on the Civil Service Jobs website (below).</p>
           <p>Following this, you will follow a structured work placement program, working on real projects in our groups.</p>
 
-          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">What is the expected career progression after this apprenticeship?</h3>
-          <p>Upon successful completion of the Level 3 Apprenticeship you will apply for a permanent role in your chosen team; this will include further career development opportunities according to the role.</p>
+    
         </div>
       </div>
 
@@ -128,6 +127,13 @@ Manage vacancy
 
   
         </div>
+
+        <div class="govuk-grid-column-one-half">
+          <h3 class="govuk-heading-s govuk-!-margin-bottom-1">What is the expected career progression after this apprenticeship?</h3>
+          <p>Upon successful completion of the Level 3 Apprenticeship you will apply for a permanent role in your chosen team; this will include further career development opportunities according to the role.</p>
+  
+        </div>
+
 
       </div>
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
@@ -207,7 +213,7 @@ Manage vacancy
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
           <h2 class="govuk-heading-l">
-            Employer's Application Instructions
+            Employer's application instructions
           </h2>
         </div>
         <div class="govuk-grid-column-three-quarters">
