--- a/app/views/v6/_summary.html
+++ b/app/views/v6/_summary.html
@@ -1,5 +1,5 @@
 <h2 class="govuk-heading-l" id="sprint-6">
-  <span class="govuk-tag">LATEST</span><br>
+  <span class="govuk-tag">LATEST version</span><br>
   Design sprint 6
   <span class="govuk-caption-l">
     2nd February 2022 &ndash; Present
