--- a/app/views/v6/_summary.html
+++ b/app/views/v6/_summary.html
@@ -32,7 +32,7 @@
     <ul class="govuk-list govuk-list--bullet"> 
       <li><a href="https://trello.com/c/trM5yrcs" class="govuk-link govuk-link--no-visited-state">#162 RAAv2 improve guidance where they recruit from an external site</a></li>  
       <li><a href="https://trello.com/c/b8U6Fwnp" class="govuk-link govuk-link--no-visited-state">#152 RAA advert/vacancy preview page</a></li>  
-      <li><a href="https://trello.com/c/BnnPvqGI" class="govuk-link govuk-link--no-visited-state">#115 RAA Adverts can have more than 1 location associated with it</a></li>  
+      <li><a href="https://trello.com/c/BnnPvqGI" class="govuk-link govuk-link--no-visited-state">#115 RAA adverts can have more than 1 location associated with it</a></li>  
     </ul>
 
     <h4 class="govuk-heading-s govuk-!-margin-bottom-2">Design artefacts</h4>  
